# ywfm

./: .gitignore  README.md  install.py  main.py  pyproject.toml  reminder.py
docs/todos/: backlog.todo  bugs.todo  todo.todo
readme/: kor.md
src/: main.py
todos/: example.todo  todo.todo
